Remove duplicated code